@@ -4,8 +4,11 @@ before_install:
   - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
   - ./travis-tool.sh bootstrap
+
 install:
   - ./travis-tool.sh install_deps
+  - ./travis-tool.sh install_github hadley/readxl
+  
 script: ./travis-tool.sh run_tests
 
 after_failure:
