@@ -44,6 +44,11 @@ import.fortran <- function(file = file, style, ...) {
     read.fortran(file = file, format = style, ...)
 }
 
+import.xls <- function(file = file, ...) {
+    out <- read_excel(path = file, ...)
+    class(out) <- "data.frame"
+}
+
 import.xlsx <- function(file = file, header = TRUE, ...) {
     read.xlsx(xlsxFile = file, colNames = header, ...)
 }
@@ -128,6 +133,7 @@ import <- function(file, format, fread = TRUE, ...) {
                 json = fromJSON(txt = file, ...),
                 rec = read.epiinfo(file = file, ...),
                 arff = read.arff(file = file),
+                xls = import.xls(file = file, ...),
                 xlsx = import.xlsx(file = file, ...),
                 fortran = import.fortran(file = file, ...),
                 zip = import.zip(file = file, ...),
