@@ -27,6 +27,7 @@ By making import and export easy, it's an obvious next step to also use R as a s
 | Stata (.dta) | Yes | Yes |
 | SPSS and SPSS portable (.sav and .por) | Yes | Yes (.sav only) |
 | "XBASE" database files (.dbf) | Yes | Yes |
+| Excel (.xls) | Yes |  |
 | Excel (.xlsx) | Yes | Yes |
 | Weka Attribute-Relation File Format (.arff) | Yes | Yes |
 | R syntax (.R) | Yes | Yes |
