@@ -1,5 +1,6 @@
 # CHANGES TO v0.1.3 #
 
+ * Added support for import from legacy Excel (.xls) files `readxl::read_excel`. (#19)
  * Added support for import from and export to the system clipboard on Windows and Mac OS.
  * Added support for export to simple XML documents. (#12)
  * Added support for import from simple XML documents via `XML::xmlToDataFrame`. (#12)
